# kotizoj

./: CHANGELOG.md  Makefile  README.md  Untitled-1.ipynb  main.py  pyproject.toml  release-please-config.json  uml.md  v1.ipynb
docs/: class_diagrams.md  release-please.md  uml.md
github/workflows/: release-please.yml
kotizoj/: Asset.py  Wallet.py  __init__.py  main.py  wallet.py
kotizoj/assets/: Asset.py  __init__.py  asset.py  crypto_currency.py  etf.py  stock.py
kotizoj/utils/: log_config.py  utils.py
scripts/: main.py
tests/: context.py
