[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "kotizoj"
version = "0.1.0"
description = "A Python project for managing assets"
authors = [
    { name = "Leonardo", email = "leoss33@outlook.com.br" }
]
dependencies = [
    "yfinance >= 0.2.65",
]
requires-python = ">=3.8"
readme = "README.md"
keywords = ["finance", "assets", "management"]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "black >= 22.0.0",
    "pylint"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "C0111"]
