[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "kotizoj"
version = "0.1.0"
description = "A Python project for managing assets"
authors = [
    { name = "Leonardo", email = "leoss33@outlook.com.br" }
]
dependencies = [
    "yfinance >= 0.2.65",
]
requires-python = ">=3.12"
readme = "README.md"
keywords = ["finance", "assets", "management"]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
    "black>=25.1.0",
    "pylint>=3.3.8",
]
test = [
    "pytest>=8.4.1",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "C0111"]
